--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           arch: amd64    # allowed values: amd64, arm64
           rootdir: ""    # defaults to "PWD"
           workdir: ""    # defaults to "PWD/unfor19-awscli"
-          
-      - run: |
+      
+      - name : check version
+        run: |
           aws --version
           
