--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,14 @@ jobs:
       run:
         working-directory: build/docker
     steps:     
-      - name : check version
-        shell: bash
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install awscli
           aws --version
           
           
